# PCS2026

./: provadue.txt
Esercitazione1/: .Media.cpp.swp  CMakeLists.txt  media2
Esercitazione1/build_es1/: CMakeCache.txt  Makefile  Media.cpp  cmake_install.cmake  media2
Esercitazione2/: CMakeLists.txt
Esercitazione2/build_es2/: CMakeCache.txt  Makefile  cmake_install.cmake  esercizio.cpp  esercizio2
Esercitazione3/: CMakeLists.txt
Esercitazione3/build_es3/: CMakeCache.txt  Esercitazione3  Makefile  cmake_install.cmake  main.cpp  rational.hpp
Esercitazione4/: CMakeLists.txt
Esercitazione4/build_es04/: CMakeCache.txt  CTestTestfile.cmake  Makefile  bubble  cmake_install.cmake  insertion  is_sorted.h  measure_sorts  measure_sorts.cpp  sort  test_bubblesort  test_bubblesort.cpp  test_insertionsort  test_insertionsort.cpp  test_selectionsort  test_selectionsort.cpp
Esercitazione4/build_es04/Testing/Temporary/: CTestCostData.txt
Esercitazione5/: CMakeLists.txt  Osservazioni esercitazione5.txt  bubblesort.h  insertionsort.h  insertionsort2.h  mergesort.h  quicksort.h  quicksort2.h  selectionsort.h  tempi.cpp  test_mergesort.cpp  test_quicksort.cpp
Esercitazione5/build_es05/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tempi  test_mergesort  test_quicksort
Esercitazione5/build_es05/Testing/Temporary/: CTestCostData.txt
Esercitazione6/: CMakeLists.txt  test_graph.cpp  unidirected_edge.hpp  unidirected_graph.hpp
Esercitazione6/build_es06/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_graph
Esercitazione6/build_es06/Testing/Temporary/: CTestCostData.txt
